--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 * {
     box-sizing: border-box;
-    margin: 0;
     padding: 10px;
+    margin: 0;
 }
 
 header,
@@ -32,11 +32,11 @@ main {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    align-items: center;
 }
 
 .search-bar {
     display: flex;
+    justify-content: center;
 }
 
 header {
